# linkbot

./: .gitignore  .gitmodules  3_STEP_PLAN_STATUS.md  AI_HANDOFF_BRIEFING.md  BRIEFING_PROMPT_FOR_AI.md  DEPLOYMENT_READY.md  DEPLOYMENT_SUCCESS.md  DOCUMENTATION_COMPLETE.md  GATEWAY_TESTING_READY.md  GMAIL_ACCESS_COMPLETE.md  GMAIL_FIXED.md  GOOGLE_MCP_SETUP_FINAL.md  GOOGLE_WORKSPACE_SETUP_READY.md  LISA_ENABLED_SKILLS_AGENTS.md  LISA_LIVE_CAPABILITY_CATALOG_2026-02-12.json  LISA_LIVE_CAPABILITY_CATALOG_2026-02-12.md  LISA_LOCAL_STATUS.md  LOCAL_TESTING_GUIDE.md  MONOREPO_COMPLETE.md  PHASE1_SECURITY_INFRASTRUCTURE_COMPLETE.md  README.md  READY_FOR_TOMORROW.md  SECURITY_SCANNING_COMPLETE.md  SKILLS_AND_AGENTS_CATALOG.json  SKILLS_SOURCING_COMPLETE.md  SKILLS_TESTING_READY.md  START_HERE.md  TEST_GOOGLE_DOCS.md  VPS_DEPLOYMENT_COMPLETE.md  linkbot  openclaw
agents/: README.md
config/: mcporter.json
docs/: DEPLOYMENT_PREP.md  (+11 more)
skills/shared/gmail-integration/: .gitignore  final-security-report.json  pyproject.toml  pyrightconfig.json  semgrep-report.json  setup.cfg
skills/shared/gmail-integration/debug/: auth_test.py  reauth_calendar.py
skills/shared/gmail-integration/docs/: overview.md  structure.md
skills/shared/gmail-integration/gmail_mcp/: main.py
skills/shared/gmail-integration/gmail_mcp/auth/: callback_server.py  token_manager.py
skills/shared/gmail-integration/gmail_mcp/calendar/: __init__.py  processor.py
skills/shared/gmail-integration/gmail_mcp/mcp/: prompts.py  resources.py  tools.py
skills/shared/gmail-integration/gmail_mcp/utils/: logger.py
(+253 files in other folders)
