[metadata]
name = gmail-mcp
version = 0.1.0
description = A Model Context Protocol (MCP) server for Gmail integration with Claude Desktop
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, win32
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    gmail_mcp
install_requires =
    mcp>=0.1.0
    uvicorn>=0.23.2
    pydantic>=2.4.2
    httpx>=0.25.0
    google-auth>=2.23.3
    google-auth-oauthlib>=1.1.0
    google-api-python-client>=2.105.0
    cryptography>=41.0.4
    python-jose>=3.3.0
    python-dateutil>=2.8.2
    pyyaml>=6.0.1
python_requires = >=3.10
package_dir =
    =.
zip_safe = no

[options.extras_require]
testing =
    pytest>=7.4.2
    pytest-cov>=4.1.0
    mypy>=1.6.1
    ruff>=0.0.292
    black>=23.9.1
    isort>=5.12.0

[mypy]
python_version = 3.10
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[mypy-yaml.*]
ignore_missing_imports = true

[mypy-google.*]
ignore_missing_imports = true 